--- a/public/015-filtr-2.html
+++ b/public/015-filtr-2.html
@@ -789,7 +789,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -834,7 +837,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -881,7 +887,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
