--- a/public/015-filtr.html
+++ b/public/015-filtr.html
@@ -797,7 +797,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -842,7 +845,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -889,7 +895,10 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Новинка</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
