--- a/public/015-filtr-3.html
+++ b/public/015-filtr-3.html
@@ -789,10 +789,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -837,10 +840,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -887,10 +893,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
