--- a/public/020-brand-catalog.html
+++ b/public/020-brand-catalog.html
@@ -804,10 +804,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -852,10 +855,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
@@ -902,10 +908,13 @@
 													<input class="invisible" type="checkbox"/><span class="square"></span><span class="chb-item__txt">Акция</span><span class="chb-item__num">226</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: red"></span><span class="chb-item__txt">Красный</span><span class="chb-item__num">653</span>
 												</label>
 												<label class="chb-item">
-													<input class="invisible" type="checkbox"/><span class="square" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: green"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
+												</label>
+												<label class="chb-item">
+													<input class="invisible" type="checkbox"/><span class="square square--bg" style="--bg: url(img/@2x/cat-card-1.png)"></span><span class="chb-item__txt">Green</span><span class="chb-item__num">653</span>
 												</label>
 												<div class="rm-hidden-js">
 													<label class="chb-item">
