--- a/public/016-cart.html
+++ b/public/016-cart.html
@@ -978,10 +978,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1007,10 +1009,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1036,10 +1040,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1065,10 +1071,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1094,10 +1102,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1123,10 +1133,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1152,10 +1164,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1181,10 +1195,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -1210,10 +1226,12 @@
 														<div class="prod-item__price">85 990 руб.
 														</div>
 													</div>
-													<div class="col-auto"><a class="prod-item__add-btn" href="#">
-														<svg class="icon icon-plus ">
-															<use xlink:href="img/svg/sprite.svg#plus"></use>
-														</svg></a>
+													<div class="col-auto">
+														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+															<svg class="icon icon-plus ">
+																<use xlink:href="img/svg/sprite.svg#plus"></use>
+															</svg></a>
+														</div>
 													</div>
 												</div>
 											</div>
