--- a/public/016-cart.html
+++ b/public/016-cart.html
@@ -975,14 +975,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1006,14 +1017,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1037,14 +1059,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1068,14 +1101,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1099,14 +1143,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1130,14 +1185,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1161,14 +1227,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1192,14 +1269,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
@@ -1223,14 +1311,25 @@
 											<div class="mt-auto">
 												<div class="prod-item__foot-row row align-items-center">
 													<div class="col">
-														<div class="prod-item__price">85 990 руб.
+														<div class="prod-item__price">69 990 руб.
 														</div>
 													</div>
 													<div class="col-auto">
-														<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
-															<svg class="icon icon-plus ">
-																<use xlink:href="img/svg/sprite.svg#plus"></use>
-															</svg></a>
+														<div class="prod-item__actions">
+															<div class="row gx-3 justify-content-end">
+																<div class="prod-item__btn-wrap"><a class="prod-item__add-btn" href="#">
+																	<svg class="icon icon-plus ">
+																		<use xlink:href="img/svg/sprite.svg#plus"></use>
+																	</svg>
+																	<svg class="icon icon-check ">
+																		<use xlink:href="img/svg/sprite.svg#check"></use>
+																	</svg><span class="prod-item__add-btn-toggle-text"><span>в корзину</span><span>в корзине</span></span></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-2.svg" alt=""/></a>
+																</div>
+																<div class="col-auto"><a class="prod-item__action" href="#"><img loading="lazy" src="img/svg/long-prod-action-3.svg" alt=""/></a>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
